# if_else_2024

./: .env  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  install-poetry.py  openapi.json  pgadmin_servers.json  pyproject.toml
if_else_2024/: main.py  utils.py
if_else_2024/accounts/: dto.py  models.py  repositories.py  routers.py  services.py
if_else_2024/auth/: dependencies.py  dto.py  models.py  repositories.py  routers.py  services.py  utils.py
if_else_2024/core/: db_manager.py  dependencies.py  exceptions.py  settings.py  setup.py  utils.py
if_else_2024/forecasts/: dto.py  models.py  repositories.py  routers.py  services.py
if_else_2024/regions/: dto.py  models.py  repositories.py  routers.py  services.py
if_else_2024/weather/: dto.py  models.py  repositories.py  routers.py  services.py
